--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -23,28 +23,11 @@ jobs:
         with:
           persist-credentials: false
 
-      # 2. Partie spécifique à Sphinx (installation des
-      #    dépendances et génération de la doc)
-
-      - name: "Set up Python"
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.8
-
-      - name: "Install Python dependencies"
-        run: |
-          pip3 install setuptools
-          pip3 install sphinx sphinx-rtd-theme
-
-      - name: "Build Sphinx Doc"
-        run: |
-          make html
-
       # 3. Déploiement sur les Github Pages
 
       - name: "Deploy Github Pages"
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages     # <- Branche sur laquelle seront commités les fichiers
+          BRANCH: github-pages     # <- Branche sur laquelle seront commités les fichiers
           FOLDER: build/html/  # <- Dossier contenant notre documentation générée
